# mcpnr

./: .gitmodules  flake.nix
nix/: default.nix
nix/mcpnr-placement/: default.nix
nix/yosys-synth_mc/: default.nix
pnr/: Cargo.toml
pnr/mcpnr-common/: Cargo.toml  build.rs
pnr/mcpnr-common/src/: lib.rs  yosys.rs
pnr/mcpnr-common/src/block_storage/: iter.rs  mod.rs  serialization.rs
pnr/mcpnr-common/src/protos/: mod.rs  placed_design.proto
pnr/mcpnr-placement/: Cargo.toml
pnr/mcpnr-placement/src/: config.rs  core.rs  gui.rs  main.rs  placement_cell.rs
pnr/mcpnr-placement/src/gui/: canvas.rs  mod.rs
pnr/mcpnr-placement/src/gui/canvas/: canvas_shaders.wgsl  lines.rs  lines.wgsl  mod.rs  rectangles.rs  shader.rs
pnr/mcpnr-placement/src/legalizer/: mod.rs  tetris.rs
pnr/mcpnr-placement/src/placer/: mod.rs  test.rs
pnr/mcpnr-placement/src/placer/analytical/: anchor_net.rs  clique.rs  mod.rs  moveable_star.rs  threshold_crossover.rs
pnr/mcpnr-placement/src/placer/diffusion/: mod.rs  test.rs
pnr/mcpnr-routing/: Cargo.toml
pnr/mcpnr-routing/src/: main.rs  netlist.rs  splat.rs  structure_cache.rs
pnr/mcpnr-routing/src/detail_routing/: mod.rs  tests.rs  wire_segment.rs
pnr/mcpnr-routing/src/minecraft_types/: mod.rs
pnr/mcpnr-routing/src/routing_2d/: mod.rs  tests.rs
pnr/routed-to-world/: convert.py  example.json
tests/: .gitignore  Makefile.common  generate_script.py  run_all.sh  script.ys
tests/adder/: Makefile  adder.v
tests/counter/: Makefile  counter.v
tests/lfsr/: Makefile  lfsr.v
tests/nor/: Makefile  nor.v
tests/nor-multibit/: Makefile  nor-multibit.v
tests/serv/: mc_io.v  synth_serv.sh
yosys-synth_mc/: Makefile  synth_mc.cc
yosys-synth_mc/techlib/: cells_sim.v  minecraft.lib
yosys-synth_mc/techlib/structures/: dff.nbt  gate_fa.nbt  gate_ha.nbt  gate_nand_i2.nbt  gate_nor_i2.nbt  gate_not.nbt  gate_xor.nbt
yosys-synth_mc/tests/: adder.v  nor-multibit.v  script.ys  synth_serv.sh
