[workspace]
resolver = "2"

members = [
  "mcpnr-common",
  "mcpnr-placement",
  "mcpnr-routing",
]

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
egui-wgpu = { git = "https://github.com/emilk/egui", branch="master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
