[package]
name = "mcpnr-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
prost = "0.9.0"
quartz_nbt = { version = "0.2", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }

[build-dependencies]
prost-build = "0.9.0"
