[package]
name = "mcpnr-placement"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = "3.1.5"
itertools = "0.10"
log = "0.4"
mcpnr-common = { path = "../mcpnr-common" }
pollster = "0.2.5"
quartz_nbt = { version = "0.2", features = [ "serde" ] }
wgpu = "0.12.0"
winit = "0.26.1"

[dependencies.egui]
version = "0.18"

[dependencies.eframe]
version = "0.18"
default-features = false
features = [ "default_fonts", "wgpu" ]

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# native egui:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web egui:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
