[package]
name = "mcpnr-placement"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = "1"
clap = "3.1.5"
itertools = "0.10"
log = "0.4"
mcpnr-common = { path = "../mcpnr-common" }
nalgebra = "0.31"
quartz_nbt = { version = "0.2", features = [ "serde" ] }
winit = "0.27"

[dependencies.egui]
version = "0.19"

[dependencies.egui-wgpu]
version = "0.19"

[dependencies.eframe]
version = "0.19"
default-features = false
features = [ "default_fonts", "wgpu" ]

# native egui:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web egui:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
