[package]
name = "mcpnr-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2.34"
itertools = "0.10"
mcpnr-common = { path = "../mcpnr-common" }
quartz_nbt = { version = "0.2", features = [ "serde" ]}
serde = { version = "1", features= [ "derive" ] }
serde_json = "1"
